# AI-Loan-Advisor

./: .env.sample  .gitignore  Dockerfile  HOW_IT_WORKS.md  README.md  TESTING_GUIDE.md  app.py  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt  vercel.json
docs/: ARCHITECTURE.md  agent_workflow.md
docs/diagrams/: architecture-orchestrator-and-agents.mmd  sequence-conversation-via-chat.mmd  state-machine-loanstatus.mmd
loan_advisor/agents/: base_agent.py  eligibility_agent.py  master_agent.py  pdf_agent.py  sales_agent.py  underwriting_agent.py  verification_agent.py
loan_advisor/models/: loan_models.py
loan_advisor/sanction_letters/: .gitkeep
loan_advisor/services/: app_write_service.py  gen_email.py  llm_service.py  loan_orchestrator.py  mcp_server.py  rate_calculator.py  send_email.py
scripts/: docker.sh  render_mermaid.py  run_denial_workflow.sh  run_full_workflow.sh
tests/: generate_sample_pdf.py  interactive_test.py  test_client.py  test_email.py  test_kyc_validation.py  test_llm_integration.py  test_scenarios.py
