[project]
name = "mcp-server-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiosmtplib>=5.0.0",
    "appwrite>=13.6.1",
    "fastapi>=0.120.0",
    "google-api-core>=2.28.1",
    "google-api-python-client>=2.187.0",
    "google-auth-oauthlib>=1.2.3",
    "groq>=0.33.0",
    "langchain-core>=1.0.1",
    "langchain-groq>=1.0.0",
    "pydantic>=2.12.3",
    "pydantic-core",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "reportlab>=4.4.4",
    "requests>=2.32.5",
    "slowapi>=0.1.9",
    "gunicorn",
    "uvicorn>=0.38.0",
]
